# ocr

./: .dockerignore  .gitignore  Dockerfile  README.md  env.example  handler.py  init.py  junit.xml  pyproject.toml  service.py  test.py  test_input.json
.github/workflows/: auto-fix-lint.yml  ci.yml  lint.yml  test.yml
docketanalyzer_ocr/: __init__.py  document.py  extract_tess.py  layout.py  ocr.py  remote.py  utils.py
docketanalyzer_ocr/setup/: run.py
tests/: README.md  conftest.py  test_document.py  test_integration.py  test_layout.py  test_ocr.py  test_package.py  test_remote.py  test_service.py  test_utils.py
tests/fixtures/: document.json
