[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docketanalyzer-ocr"
version = "0.1.0"
authors = [
    { name = "Nathan Dahlberg" },
]
description = "Docket Analyzer OCR Container"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "boto3",
    "click",
    "dill",
    "doclayout_yolo",
    "huggingface-hub",
    "paddlepaddle",
    "paddleocr",
    "pymupdf",
    "pytest",
    "pytest-cov",
    "python-dotenv",
    "ruff",
    "runpod",
]

[project.optional-dependencies]
gpu = [
    "paddlepaddle-gpu==2.6.2",
]

[tool.ruff]
lint.select = ["E", "F", "I"]
line-length = 120

[tool.ruff.lint.isort]
known-first-party = ["docketanalyzer_ocr"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
# Filter out warnings that aren't relevant to our code
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
    "ignore::DeprecationWarning:thop.profile",
    "ignore::DeprecationWarning:setuptools.command.easy_install",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:sys",
]